--- a/index.html
+++ b/index.html
@@ -14,7 +14,23 @@
 
 <body>
     <!-- nav button -->
+    <span class="nav-btn" id="nav-btn">
+        <i class="fa fa-bars"></i>
+    </span>
     <!-- navbar -->
+    <nav class="navbar" id="navbar">
+        <div class="navbar-header">
+            <span class="nav-close" id="nav-close">
+                <i class="fa fa-times"></i>
+            </span>
+        </div>
+        <ul class="nav-items">
+            <li><a href="index.html" class="nav-link">home</a></li>
+            <li><a href="skills.html" class="nav-link">skills</a></li>
+            <li><a href="about.html" class="nav-link">about</a></li>
+            <li><a href="products.html" class="nav-link">products</a></li>
+        </ul>
+    </nav>
     <!-- header -->
     <header class="header">
         <div class="banner">
@@ -144,6 +160,55 @@
         </div>
     </section>
     <!-- end of products -->
+    <!--  services -->
+    <section class="services">
+        <div classs="services-title text-center">
+            <h3 class="section-subtitle">explore</h3>
+            <h2 class="section-title">our services</h2>
+        </div>
+        <div class="section-center clearfix">
+            <article class="service-card">
+                <div class="service-img-container">
+                    <img src="./images/Tea.jfif" class="service-img" alt="single service" />
+                    <span class="service-icon">
+                        <i class="fa fa-coffee fa-fw"></i>
+                    </span>
+                </div>
+                <div class="service-info">
+                    <h4>custom recipes</h4>
+                    <h4>service</h4>
+                    <button type="button" class="service-btn">read more</button>
+                </div>
+            </article>
+            <article class="service-card">
+                <div class="service-img-container">
+                    <img src="./images/Tea.jfif" class="service-img" alt="single service" />
+                    <span class="service-icon">
+                        <i class="fa fa-coffee fa-fw"></i>
+                    </span>
+                </div>
+                <div class="service-info">
+                    <h4>tea aging</h4>
+                    <h4>service</h4>
+                    <button type="button" class="service-btn">read more</button>
+                </div>
+            </article>
+            <article class="service-card">
+                <div class="service-img-container">
+                    <img src="./images/Tea.jfif" class="service-img" alt="single service" />
+                    <span class="service-icon">
+                        <i class="fa fa-coffee fa-fw"></i>
+                    </span>
+                </div>
+                <div class="service-info">
+                    <h4>home delivery</h4>
+                    <h4>service</h4>
+                    <button type="button" class="service-btn">read more</button>
+                </div>
+            </article>
+        </div>
+    </section>
+    <!--  end of services -->
     <!-- contact -->
     <section class="contact">
         <!-- contact info-->
@@ -192,6 +257,25 @@
         </div>
     </section>
     <!-- end of contact -->
+    <footer class="footer">
+        <div class="section-center">
+            <div class="social-icons">
+                <a href="#" class="social-icon">
+                    <i class="fa fa-facebook"></i>
+                </a>
+                <a href="#" class="social-icon">
+                    <i class="fa fa-twitter"></i>
+                </a>
+                <a href="#" class="social-icon">
+                    <i class="fa fa-instagram"></i>
+                </a>
+            </div>
+            <p class="footer-text">
+                &copy; <span class="text-primary">tea station</span>. all rights reserved
+            </p>
+        </div>
+    </footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
